Imported necessary libraries and made a custom theme for all the future visuals representations

--- a/Lab/lab01_DecisionTree_RandomForest_Mushroom_dataset.ipynb
+++ b/Lab/lab01_DecisionTree_RandomForest_Mushroom_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMx94ptz96P1/oMwO79lEKN",
+      "authorship_tag": "ABX9TyPPsDtl2Oi3wuIr7bB5mOcI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,62 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 1. IMPORT LIBRARIES"
+      ],
+      "metadata": {
+        "id": "xk2gFcikkQZX"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "W120G5sfUoOt"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import math\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import (\n",
+        "    accuracy_score,\n",
+        "    precision_score,\n",
+        "    recall_score,\n",
+        "    f1_score,\n",
+        "    confusion_matrix\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2. VISUAL THEME (Personalized)"
+      ],
+      "metadata": {
+        "id": "YD0g-hXmkwt_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.set_theme(style=\"whitegrid\")\n",
+        "sns.set_palette(\"pink\")\n",
+        "plt.rcParams[\"figure.figsize\"] = (8, 5)"
+      ],
+      "metadata": {
+        "id": "p5cFWALXkwVI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
