--- a/Lab/lab01_DecisionTree_RandomForest_Mushroom_dataset.ipynb
+++ b/Lab/lab01_DecisionTree_RandomForest_Mushroom_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPsDtl2Oi3wuIr7bB5mOcI",
+      "authorship_tag": "ABX9TyNT0dg9EBa15ijNNgGEonID",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "W120G5sfUoOt"
       },
@@ -81,8 +81,353 @@
       "metadata": {
         "id": "p5cFWALXkwVI"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3. LOAD DATASET"
+      ],
+      "metadata": {
+        "id": "VWDqZHI-l7ID"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/mushroom/agaricus-lepiota.data\"\n",
+        "\n",
+        "columns = [\n",
+        "    \"target\",\"cap-shape\",\"cap-surface\",\"cap-color\",\"bruises\",\"odor\",\n",
+        "    \"gill-attachment\",\"gill-spacing\",\"gill-size\",\"gill-color\",\n",
+        "    \"stalk-shape\",\"stalk-root\",\"stalk-surface-above-ring\",\n",
+        "    \"stalk-surface-below-ring\",\"stalk-color-above-ring\",\n",
+        "    \"stalk-color-below-ring\",\"veil-type\",\"veil-color\",\n",
+        "    \"ring-number\",\"ring-type\",\"spore-print-color\",\"population\",\"habitat\"\n",
+        "]\n",
+        "\n",
+        "data = pd.read_csv(url, names=columns)\n",
+        "df = pd.DataFrame(data)\n",
+        "\n",
+        "print(type(df))\n",
+        "df.head()\n",
+        "df.info()\n",
+        "df.describe(include=\"all\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 814
+        },
+        "id": "5bWf_wPCl-AK",
+        "outputId": "35b29810-389a-4cfc-86b6-5d78bd459d5d"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 8124 entries, 0 to 8123\n",
+            "Data columns (total 23 columns):\n",
+            " #   Column                    Non-Null Count  Dtype \n",
+            "---  ------                    --------------  ----- \n",
+            " 0   target                    8124 non-null   object\n",
+            " 1   cap-shape                 8124 non-null   object\n",
+            " 2   cap-surface               8124 non-null   object\n",
+            " 3   cap-color                 8124 non-null   object\n",
+            " 4   bruises                   8124 non-null   object\n",
+            " 5   odor                      8124 non-null   object\n",
+            " 6   gill-attachment           8124 non-null   object\n",
+            " 7   gill-spacing              8124 non-null   object\n",
+            " 8   gill-size                 8124 non-null   object\n",
+            " 9   gill-color                8124 non-null   object\n",
+            " 10  stalk-shape               8124 non-null   object\n",
+            " 11  stalk-root                8124 non-null   object\n",
+            " 12  stalk-surface-above-ring  8124 non-null   object\n",
+            " 13  stalk-surface-below-ring  8124 non-null   object\n",
+            " 14  stalk-color-above-ring    8124 non-null   object\n",
+            " 15  stalk-color-below-ring    8124 non-null   object\n",
+            " 16  veil-type                 8124 non-null   object\n",
+            " 17  veil-color                8124 non-null   object\n",
+            " 18  ring-number               8124 non-null   object\n",
+            " 19  ring-type                 8124 non-null   object\n",
+            " 20  spore-print-color         8124 non-null   object\n",
+            " 21  population                8124 non-null   object\n",
+            " 22  habitat                   8124 non-null   object\n",
+            "dtypes: object(23)\n",
+            "memory usage: 1.4+ MB\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "       target cap-shape cap-surface cap-color bruises  odor gill-attachment  \\\n",
+              "count    8124      8124        8124      8124    8124  8124            8124   \n",
+              "unique      2         6           4        10       2     9               2   \n",
+              "top         e         x           y         n       f     n               f   \n",
+              "freq     4208      3656        3244      2284    4748  3528            7914   \n",
+              "\n",
+              "       gill-spacing gill-size gill-color  ... stalk-surface-below-ring  \\\n",
+              "count          8124      8124       8124  ...                     8124   \n",
+              "unique            2         2         12  ...                        4   \n",
+              "top               c         b          b  ...                        s   \n",
+              "freq           6812      5612       1728  ...                     4936   \n",
+              "\n",
+              "       stalk-color-above-ring stalk-color-below-ring veil-type veil-color  \\\n",
+              "count                    8124                   8124      8124       8124   \n",
+              "unique                      9                      9         1          4   \n",
+              "top                         w                      w         p          w   \n",
+              "freq                     4464                   4384      8124       7924   \n",
+              "\n",
+              "       ring-number ring-type spore-print-color population habitat  \n",
+              "count         8124      8124              8124       8124    8124  \n",
+              "unique           3         5                 9          6       7  \n",
+              "top              o         p                 w          v       d  \n",
+              "freq          7488      3968              2388       4040    3148  \n",
+              "\n",
+              "[4 rows x 23 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-435b126e-e016-477c-a383-2face63fc192\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>target</th>\n",
+              "      <th>cap-shape</th>\n",
+              "      <th>cap-surface</th>\n",
+              "      <th>cap-color</th>\n",
+              "      <th>bruises</th>\n",
+              "      <th>odor</th>\n",
+              "      <th>gill-attachment</th>\n",
+              "      <th>gill-spacing</th>\n",
+              "      <th>gill-size</th>\n",
+              "      <th>gill-color</th>\n",
+              "      <th>...</th>\n",
+              "      <th>stalk-surface-below-ring</th>\n",
+              "      <th>stalk-color-above-ring</th>\n",
+              "      <th>stalk-color-below-ring</th>\n",
+              "      <th>veil-type</th>\n",
+              "      <th>veil-color</th>\n",
+              "      <th>ring-number</th>\n",
+              "      <th>ring-type</th>\n",
+              "      <th>spore-print-color</th>\n",
+              "      <th>population</th>\n",
+              "      <th>habitat</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>...</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>8124</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>unique</th>\n",
+              "      <td>2</td>\n",
+              "      <td>6</td>\n",
+              "      <td>4</td>\n",
+              "      <td>10</td>\n",
+              "      <td>2</td>\n",
+              "      <td>9</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>12</td>\n",
+              "      <td>...</td>\n",
+              "      <td>4</td>\n",
+              "      <td>9</td>\n",
+              "      <td>9</td>\n",
+              "      <td>1</td>\n",
+              "      <td>4</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>9</td>\n",
+              "      <td>6</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>top</th>\n",
+              "      <td>e</td>\n",
+              "      <td>x</td>\n",
+              "      <td>y</td>\n",
+              "      <td>n</td>\n",
+              "      <td>f</td>\n",
+              "      <td>n</td>\n",
+              "      <td>f</td>\n",
+              "      <td>c</td>\n",
+              "      <td>b</td>\n",
+              "      <td>b</td>\n",
+              "      <td>...</td>\n",
+              "      <td>s</td>\n",
+              "      <td>w</td>\n",
+              "      <td>w</td>\n",
+              "      <td>p</td>\n",
+              "      <td>w</td>\n",
+              "      <td>o</td>\n",
+              "      <td>p</td>\n",
+              "      <td>w</td>\n",
+              "      <td>v</td>\n",
+              "      <td>d</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>freq</th>\n",
+              "      <td>4208</td>\n",
+              "      <td>3656</td>\n",
+              "      <td>3244</td>\n",
+              "      <td>2284</td>\n",
+              "      <td>4748</td>\n",
+              "      <td>3528</td>\n",
+              "      <td>7914</td>\n",
+              "      <td>6812</td>\n",
+              "      <td>5612</td>\n",
+              "      <td>1728</td>\n",
+              "      <td>...</td>\n",
+              "      <td>4936</td>\n",
+              "      <td>4464</td>\n",
+              "      <td>4384</td>\n",
+              "      <td>8124</td>\n",
+              "      <td>7924</td>\n",
+              "      <td>7488</td>\n",
+              "      <td>3968</td>\n",
+              "      <td>2388</td>\n",
+              "      <td>4040</td>\n",
+              "      <td>3148</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>4 rows × 23 columns</p>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-435b126e-e016-477c-a383-2face63fc192')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-435b126e-e016-477c-a383-2face63fc192 button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-435b126e-e016-477c-a383-2face63fc192');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe"
+            }
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     }
   ]
 }
