--- a/Lab/lab01_DecisionTree_RandomForest_Mushroom_dataset.ipynb
+++ b/Lab/lab01_DecisionTree_RandomForest_Mushroom_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNT0dg9EBa15ijNNgGEonID",
+      "authorship_tag": "ABX9TyNfsqoz0CiwDoIjQpIW3C4S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,26 +110,48 @@
         "data = pd.read_csv(url, names=columns)\n",
         "df = pd.DataFrame(data)\n",
         "\n",
-        "print(type(df))\n",
-        "df.head()\n",
+        "print(df.head().T)\n",
         "df.info()\n",
         "df.describe(include=\"all\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 814
+          "height": 1000
         },
         "id": "5bWf_wPCl-AK",
-        "outputId": "35b29810-389a-4cfc-86b6-5d78bd459d5d"
+        "outputId": "be6f9c6f-13d7-4efb-d2b4-77846b0b925f"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
+            "                          0  1  2  3  4\n",
+            "target                    p  e  e  p  e\n",
+            "cap-shape                 x  x  b  x  x\n",
+            "cap-surface               s  s  s  y  s\n",
+            "cap-color                 n  y  w  w  g\n",
+            "bruises                   t  t  t  t  f\n",
+            "odor                      p  a  l  p  n\n",
+            "gill-attachment           f  f  f  f  f\n",
+            "gill-spacing              c  c  c  c  w\n",
+            "gill-size                 n  b  b  n  b\n",
+            "gill-color                k  k  n  n  k\n",
+            "stalk-shape               e  e  e  e  t\n",
+            "stalk-root                e  c  c  e  e\n",
+            "stalk-surface-above-ring  s  s  s  s  s\n",
+            "stalk-surface-below-ring  s  s  s  s  s\n",
+            "stalk-color-above-ring    w  w  w  w  w\n",
+            "stalk-color-below-ring    w  w  w  w  w\n",
+            "veil-type                 p  p  p  p  p\n",
+            "veil-color                w  w  w  w  w\n",
+            "ring-number               o  o  o  o  o\n",
+            "ring-type                 p  p  p  p  e\n",
+            "spore-print-color         k  n  n  k  n\n",
+            "population                s  n  n  s  a\n",
+            "habitat                   u  g  m  u  g\n",
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 8124 entries, 0 to 8123\n",
             "Data columns (total 23 columns):\n",
@@ -194,7 +216,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-435b126e-e016-477c-a383-2face63fc192\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4f686be5-8eb4-4f22-a8ef-b7b72c0ada48\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -340,7 +362,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-435b126e-e016-477c-a383-2face63fc192')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4f686be5-8eb4-4f22-a8ef-b7b72c0ada48')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -392,12 +414,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-435b126e-e016-477c-a383-2face63fc192 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4f686be5-8eb4-4f22-a8ef-b7b72c0ada48 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-435b126e-e016-477c-a383-2face63fc192');\n",
+              "        const element = document.querySelector('#df-4f686be5-8eb4-4f22-a8ef-b7b72c0ada48');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -425,7 +447,122 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 5. DATA CLEANING"
+      ],
+      "metadata": {
+        "id": "nsyiWv1yoxej"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.replace(\"?\", np.nan, inplace=True)\n",
+        "df.dropna(inplace=True)"
+      ],
+      "metadata": {
+        "id": "89kEyDaeo67x"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 6. ENCODING CATEGORICAL FEATURES"
+      ],
+      "metadata": {
+        "id": "5n6Z6abCo8vl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "le = LabelEncoder()\n",
+        "for col in df.columns:\n",
+        "    df[col] = le.fit_transform(df[col])\n",
+        "\n",
+        "print(\"\\nAFTER ENCODING\")\n",
+        "print(df.head().T)\n",
+        "print(df.info())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I-B7Qp29o-d8",
+        "outputId": "1f0a63a7-82a9-4c34-a7a6-76002e284364"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "AFTER ENCODING\n",
+            "                          0  1  2  3  4\n",
+            "target                    1  0  0  1  0\n",
+            "cap-shape                 5  5  0  5  5\n",
+            "cap-surface               2  2  2  3  2\n",
+            "cap-color                 4  7  6  6  3\n",
+            "bruises                   1  1  1  1  0\n",
+            "odor                      6  0  3  6  5\n",
+            "gill-attachment           1  1  1  1  1\n",
+            "gill-spacing              0  0  0  0  1\n",
+            "gill-size                 1  0  0  1  0\n",
+            "gill-color                2  2  3  3  2\n",
+            "stalk-shape               0  0  0  0  1\n",
+            "stalk-root                2  1  1  2  2\n",
+            "stalk-surface-above-ring  2  2  2  2  2\n",
+            "stalk-surface-below-ring  2  2  2  2  2\n",
+            "stalk-color-above-ring    5  5  5  5  5\n",
+            "stalk-color-below-ring    5  5  5  5  5\n",
+            "veil-type                 0  0  0  0  0\n",
+            "veil-color                0  0  0  0  0\n",
+            "ring-number               1  1  1  1  1\n",
+            "ring-type                 3  3  3  3  0\n",
+            "spore-print-color         1  2  2  1  2\n",
+            "population                3  2  2  3  0\n",
+            "habitat                   5  1  3  5  1\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 5644 entries, 0 to 8114\n",
+            "Data columns (total 23 columns):\n",
+            " #   Column                    Non-Null Count  Dtype\n",
+            "---  ------                    --------------  -----\n",
+            " 0   target                    5644 non-null   int64\n",
+            " 1   cap-shape                 5644 non-null   int64\n",
+            " 2   cap-surface               5644 non-null   int64\n",
+            " 3   cap-color                 5644 non-null   int64\n",
+            " 4   bruises                   5644 non-null   int64\n",
+            " 5   odor                      5644 non-null   int64\n",
+            " 6   gill-attachment           5644 non-null   int64\n",
+            " 7   gill-spacing              5644 non-null   int64\n",
+            " 8   gill-size                 5644 non-null   int64\n",
+            " 9   gill-color                5644 non-null   int64\n",
+            " 10  stalk-shape               5644 non-null   int64\n",
+            " 11  stalk-root                5644 non-null   int64\n",
+            " 12  stalk-surface-above-ring  5644 non-null   int64\n",
+            " 13  stalk-surface-below-ring  5644 non-null   int64\n",
+            " 14  stalk-color-above-ring    5644 non-null   int64\n",
+            " 15  stalk-color-below-ring    5644 non-null   int64\n",
+            " 16  veil-type                 5644 non-null   int64\n",
+            " 17  veil-color                5644 non-null   int64\n",
+            " 18  ring-number               5644 non-null   int64\n",
+            " 19  ring-type                 5644 non-null   int64\n",
+            " 20  spore-print-color         5644 non-null   int64\n",
+            " 21  population                5644 non-null   int64\n",
+            " 22  habitat                   5644 non-null   int64\n",
+            "dtypes: int64(23)\n",
+            "memory usage: 1.0 MB\n",
+            "None\n"
+          ]
         }
       ]
     }
