--- a/Lab/lab01_DecisionTree_RandomForest_Mushroom_dataset.ipynb
+++ b/Lab/lab01_DecisionTree_RandomForest_Mushroom_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNE1x8E7QhvX1YiRjsjgkKp",
+      "authorship_tag": "ABX9TyM2D+LWnTltXftYbWZX70fB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,9 +120,9 @@
           "height": 1000
         },
         "id": "5bWf_wPCl-AK",
-        "outputId": "be6f9c6f-13d7-4efb-d2b4-77846b0b925f"
+        "outputId": "e28c592e-e600-49bd-a4f2-1e5ce3196829"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +216,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4f686be5-8eb4-4f22-a8ef-b7b72c0ada48\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-886b7e84-2879-47b4-927b-042e2bf5618e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -362,7 +362,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4f686be5-8eb4-4f22-a8ef-b7b72c0ada48')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-886b7e84-2879-47b4-927b-042e2bf5618e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -414,12 +414,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4f686be5-8eb4-4f22-a8ef-b7b72c0ada48 button.colab-df-convert');\n",
+              "        document.querySelector('#df-886b7e84-2879-47b4-927b-042e2bf5618e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4f686be5-8eb4-4f22-a8ef-b7b72c0ada48');\n",
+              "        const element = document.querySelector('#df-886b7e84-2879-47b4-927b-042e2bf5618e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -447,7 +447,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 3
         }
       ]
     },
@@ -469,7 +469,7 @@
       "metadata": {
         "id": "89kEyDaeo67x"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -497,9 +497,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I-B7Qp29o-d8",
-        "outputId": "1f0a63a7-82a9-4c34-a7a6-76002e284364"
+        "outputId": "b50990da-d20a-4928-ae71-844c6a4e5b7a"
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,7 +580,7 @@
       "cell_type": "code",
       "source": [
         "# -------------------------\n",
-        "# 1. CORRELATION HEATMAP\n",
+        "# CORRELATION HEATMAP\n",
         "# -------------------------\n",
         "plt.figure(figsize=(14, 12))\n",
         "corr = df.corr()\n",
@@ -598,12 +598,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 735
         },
         "id": "Cg31aih5s3t8",
-        "outputId": "4e12375f-eb55-4dcd-d17d-12b995006310"
+        "outputId": "b5caec5c-d2d0-44eb-ecda-f9de908f200c"
       },
-      "execution_count": 20,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -656,7 +656,7 @@
         "id": "NCY7ac-Lw39A",
         "outputId": "3d36c7d3-37b0-459f-cbc4-276da9446de4"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -669,6 +669,39 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# TRAIN / TEST SPLIT"
+      ],
+      "metadata": {
+        "id": "OMwpJO-Nu-c3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df.drop(\"target\", axis=1).values\n",
+        "y = df[\"target\"].values\n",
+        "feature_names = df.drop(\"target\", axis=1).columns.tolist()\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y, test_size=0.2, random_state=42\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "6F6an7cgvBRu"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "wJmJVbn2runY"
+      }
     }
   ]
 }
