--- a/Lab/Lab02_Clustering.ipynb
+++ b/Lab/Lab02_Clustering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhWSTqvFvIMP/jwL1o2oob",
+      "authorship_tag": "ABX9TyMQ75NNGVjF+sImhxqn8hAm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -326,6 +326,86 @@
           "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Basic Exploration"
+      ],
+      "metadata": {
+        "id": "Ts5owMMD5Cen"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.info())\n",
+        "print(\"\\nMissing values:\\n\", df.isnull().sum())\n",
+        "\n",
+        "# Rename columns for convenience\n",
+        "df.columns = [c.strip().lower().replace(\" \", \"_\") for c in df.columns]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "16jz4SPW5F-q",
+        "outputId": "ea8d1d3e-8780-40de-dd5a-7bf6ebe6da74"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 200 entries, 0 to 199\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column                  Non-Null Count  Dtype \n",
+            "---  ------                  --------------  ----- \n",
+            " 0   CustomerID              200 non-null    int64 \n",
+            " 1   Gender                  200 non-null    object\n",
+            " 2   Age                     200 non-null    int64 \n",
+            " 3   Annual Income (k$)      200 non-null    int64 \n",
+            " 4   Spending Score (1-100)  200 non-null    int64 \n",
+            "dtypes: int64(4), object(1)\n",
+            "memory usage: 7.9+ KB\n",
+            "None\n",
+            "\n",
+            "Missing values:\n",
+            " CustomerID                0\n",
+            "Gender                    0\n",
+            "Age                       0\n",
+            "Annual Income (k$)        0\n",
+            "Spending Score (1-100)    0\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Feature Selection & Scaling"
+      ],
+      "metadata": {
+        "id": "E1r1LrkI5K2h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features = ['annual_income_(k$)', 'spending_score_(1-100)']\n",
+        "X = df[features]\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_scaled = scaler.fit_transform(X)"
+      ],
+      "metadata": {
+        "id": "MuF4wavO5NT4"
+      },
+      "execution_count": 5,
+      "outputs": []
     }
   ]
 }
